k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xds-test
  labels:
    istio-injection: enabled
