k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: greeter-mtls
  namespace: xds-test
spec:
  host: greeter.xds-test.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
